# 6flow-convergence

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  railway.toml
compiler/: .gitignore  Cargo.toml  README.md
compiler/src/: error.rs  lib.rs  wasm.rs
compiler/src/codegen/: config_schema.rs  fetch_fns.rs  files.rs  handler.rs  imports.rs  mod.rs  operations.rs  trigger.rs  value_expr.rs  writer.rs
compiler/src/ir/: mod.rs  types.rs  validate.rs
compiler/src/lower/: builder.rs  expand.rs  extract.rs  mod.rs  reference.rs  topo.rs  trigger.rs
compiler/src/parse/: graph.rs  mod.rs  types.rs
compiler/src/validate/: mod.rs  node_rules.rs  structural.rs
compiler/tests/: codegen_basic.rs  e2e_kyc_minting.rs  e2e_mockups.rs  e2e_pipeline.rs  ir_operations.rs  ir_topologies.rs  ir_triggers.rs  ir_validate.rs  ir_value_expr.rs  kyc_minting.rs  lower_basic.rs  parse_basic.rs  test_codegen.rs  test_topologies.rs  test_triggers.rs  test_validation.rs  validate_graph.rs
compiler/tests/fixtures/: cycle.json  example_workflow.json  if_missing_handle.json  linear_workflow.json  mint_convenience.json  no_trigger.json  sample_evm_minting_pipeline.json  sample_filter_branching.json  sample_mockup.json  sample_simple_cron_http.json  sample_webhook_parse_log.json  self_loop.json  unreachable_node.json
compiler/tests/helpers/: mod.rs
compiler/tests/snapshots/: codegen_basic__branching_workflow_config_json.snap  codegen_basic__branching_workflow_main_ts.snap  codegen_basic__branching_workflow_package_json.snap  (+10 more)
(+164 files in other folders)
