[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wasm-bindgen = "0.2"
petgraph = "0.7"

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
